# Infinity-Engine

./: .gitignore  CMakeLists.txt  README.md
ThirdPartyLibs/GLAD/headers/glad/: glad.h
ThirdPartyLibs/GLAD/src/: glad.c
ThirdPartyLibs/boost_1_84_0/tools/boost_install/test/iostreams/zlib-1.2.11/contrib/dotzlib/DotZLib/: CodecBase.cs  Deflater.cs
src/: main.cpp
src/Temp/: OpenGLStatics.h
src/engine/build_macros/: Debug_Build_Macros.h  Default_Build_Macros.h  Development_Build_Macros.h  Release_Build_Macros.h
src/engine/core/: CoreIncludes.h  InfEngine.cpp  InfEngine.h
src/engine/core/io/: IOManager.cpp  IOManager.h
src/engine/core/log/: LogManager.cpp  LogManager.h
src/engine/renderer/: IERenderer.cpp  IERenderer.h
